deployment/networking/http/ray/serve/ray-cloud-1-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ray-cloud-1-serve-virtualservice
spec:
  hosts:
  - "ray.cloud.serve-1.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: raycluster-kuberay-head-svc.default.svc.cluster.local
        port:
          number: 8000
