deployment/networking/http/ray/serve/ray-cloud-2-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ray-cloud-2-serve-virtualservice
spec:
  hosts:
  - "ray.cloud.serve-2.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: ray-cloud-1-serve.integration.svc.cluster.local
        port:
          number: 8451
