deployment/networking/http/ray/serve/ray-hpc-3-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ray-hpc-3-serve-virtualservice
spec:
  hosts:
  - "ray.hpc.serve-3.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: ray-hpc-3-serve.integration.svc.cluster.local
        port:
          number: 8353
