deployment/networking/http/ray/serve/ray-local-2-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ray-local-2-serve-virtualservice
spec:
  hosts:
  - "ray.local.serve-2.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: chisel-server-service.chisel.svc.cluster.local
        port:
          number: 8302
